--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -274,6 +274,15 @@
     <Filter Include="sonia.bang\entities\tuple">
       <UniqueIdentifier>{e82fcb8b-15f5-40a1-b5b6-5f0b408d0b49}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sonia.bang\errors">
+      <UniqueIdentifier>{5a3910f0-4852-4e94-8a38-3f7c63d36ac8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.bang\entities\functions\extern">
+      <UniqueIdentifier>{dd97fc98-a44f-4b86-8305-9d180c004f71}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.bang\entities\struct">
+      <UniqueIdentifier>{808cb3e6-afa1-4a67-8a01-d6e12de319d5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\sonia\shared_ptr.hpp">
@@ -2265,6 +2274,36 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\create_identifier_pattern.hpp">
       <Filter>sonia.bang\entities\functions</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\errors\function_call_match_error.hpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\errors\pattern_match_error.hpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\functions\extern\to_string_pattern.hpp">
+      <Filter>sonia.bang\entities\functions\extern</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\ast\assign_expression_visitor.hpp">
+      <Filter>sonia.bang\ast</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\errors\assign_error.hpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\struct\struct_entity.hpp">
+      <Filter>sonia.bang\entities\struct</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\struct\new_struct_pattern.hpp">
+      <Filter>sonia.bang\entities\struct</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\make_tuple_pattern.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_entity.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -2644,6 +2683,39 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\entities\functions\create_identifier_pattern.cpp">
       <Filter>sonia.bang\entities\functions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\errors\function_call_match_error.cpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\errors\pattern_match_error.cpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\functions\extern\to_string_pattern.cpp">
+      <Filter>sonia.bang\entities\functions\extern</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\errors\assign_error.cpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\ast\assign_expression_visitor.cpp">
+      <Filter>sonia.bang\ast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_entity.cpp">
+      <Filter>sonia.bang\entities\struct</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\bang_ast_terms.cpp">
+      <Filter>sonia.bang</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\struct\new_struct_pattern.cpp">
+      <Filter>sonia.bang\entities\struct</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\make_tuple_pattern.cpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_entity.cpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.cpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
