--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -283,6 +283,7 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\make_tuple_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\type_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\variable_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\errors.hpp" />
@@ -765,7 +766,9 @@
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\make_tuple_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\type_entity.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\variable_entity.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\assign_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\circular_dependency_error.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\errors\function_call_match_error.cpp" />
